--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@
 
 }
 .button-header:hover {
-  color: #4e4e4e !important;
+  color: #7e7e7e !important;
   
+}
+.miniature {
+  transition: .3s;
+}
+.miniature:hover {
+  background-color: #c7c7c7;
 }
